fix spacing on menu and comment out code related to image gallery hovers

--- a/mystyle.css
+++ b/mystyle.css
@@ -202,7 +202,8 @@ header .menu .filter {
 }
 header .menu .filter li {
     display: flex;
-    padding: 8px 10px 12px 10px;
+    /* padding: 8px 10px 12px 10px; */
+    padding: 10px 10px;
     transition: all 0.15s ease;
     position: relative;
     cursor: pointer;
@@ -212,7 +213,7 @@ header .menu .filter li span {
     height: 8px;
     border-radius: 50%;
     position: absolute;
-    top: 16px;
+    top: 18px;
     left: -4px;
     opacity: 0;
     -webkit-transform: scale(0) translateX(10px);
